src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Pre_Course_Activity_2__c</fullName>
        <label>Pre-Course Activity # 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Course_OR_Lit_Discuss_Complete__c</fullName>
        <label>Pre-Course OR Lit Discuss Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter_Fee_Due__c</fullName>
        <label>Presenter Fee Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Serial__c</fullName>
        <description>Serial # for products which are sent out</description>
        <label>Product Serial #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Requirement_1__c</fullName>
        <label>Professional Requirement 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Requirement_2__c</fullName>
        <label>Professional Requirement 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Requirement_3__c</fullName>
        <label>Professional Requirement 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_from_marker__c</fullName>
        <label>Received from marker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegistrarTrainingProvider__c</fullName>
        <label>RegistrarTrainingProvider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Call__c</fullName>
        <label>Sales Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-Not Called</fullName>
                </value>
                <value>
                    <fullName>1-Called-No Answer</fullName>
                </value>
                <value>
                    <fullName>2-Called-Message</fullName>
                </value>
                <value>
                    <fullName>3-Called-Message &amp; SMS</fullName>
                </value>
                <value>
                    <fullName>4-Called-Sent Email</fullName>
                </value>
                <value>
                    <fullName>5-Called-Not Available</fullName>
                </value>
                <value>
                    <fullName>6-Speak</fullName>
                </value>
                <value>
                    <fullName>7-Live Chat</fullName>
                </value>
                <value>
                    <fullName>8-Email Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shortid__c</fullName>
        <label>Shortid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Enquiry_or_Registration__c</fullName>
        <label>Source of Enquiry or Registration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACRRM Newsletter</fullName>
                </value>
                <value>
                    <fullName>Allied Medical</fullName>
                </value>
                <value>
                    <fullName>ARL</fullName>
                </value>
                <value>
                    <fullName>Australian Doctor Magazine</fullName>
                </value>
                <value>
                    <fullName>Australian Family Physician</fullName>
                </value>
                <value>
                    <fullName>Colleague Referral</fullName>
                </value>
                <value>
                    <fullName>College or Association</fullName>
                </value>
                <value>
                    <fullName>Direct Email</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Division Newsletter</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Fax News Release</fullName>
                </value>
                <value>
                    <fullName>GP Conference</fullName>
                </value>
                <value>
                    <fullName>GP16 Conference</fullName>
                </value>
                <value>
                    <fullName>HelloBar</fullName>
                </value>
                <value>
                    <fullName>IMC Conference</fullName>
                </value>
                <value>
                    <fullName>Internet Research</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Last Years Courses</fullName>
                </value>
                <value>
                    <fullName>Masters Student</fullName>
                </value>
                <value>
                    <fullName>Medical Observer</fullName>
                </value>
                <value>
                    <fullName>Medical Republic</fullName>
                </value>
                <value>
                    <fullName>Molescan</fullName>
                </value>
                <value>
                    <fullName>New Zealand Doctor</fullName>
                </value>
                <value>
                    <fullName>Online Ads</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Past Conference</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Previous Course Attendance</fullName>
                </value>
                <value>
                    <fullName>Print Brochure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Change_Date__c</fullName>
        <description>requested by client as  per their data base</description>
        <label>Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Cases_Recevied__c</fullName>
        <label>Standard Cases Recevied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>CreditCardSelected</fullName>
                    <isActive>false</isActive>
                    <label>CreditCardSelected</label>
                </value>
                <value>
                    <fullName>EnrolmentCompleted</fullName>
                    <isActive>false</isActive>
                    <label>EnrolmentCompleted</label>
                </value>
                <value>
                    <fullName>Lost or Abandoned</fullName>
                    <isActive>false</isActive>
                    <label>Lost or Abandoned</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                    <isActive>false</isActive>
                    <label>Paid</label>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                    <isActive>false</isActive>
                    <label>Waitlist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_review__c</fullName>
        <label>Submitted for review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinars_Attended_Number__c</fullName>
        <label>Webinars Attended (Number)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkbookFormat__c</fullName>
        <label>WorkbookFormat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Paid__c</fullName>
        <description>For online courses - has the participant chosen to pay for their workbook.  If Blank - assume Workbook is included, If Yes - a Workbook is included.  If No - no Workbook to be sent.</description>
        <inlineHelpText>For online courses - has the participant chosen to pay for their workbook.  If Blank - assume Workbook is included, If Yes - a Workbook is included.  If No - no Workbook to be sent.</inlineHelpText>
        <label>Workbook Paid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hcreg_country__c</fullName>
        <label>HCREG Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                    <default>true</default>
                    <label>AU</label>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>DM__c</columns>
        <columns>Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/16/2019</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Enrolments_Paid_Last_Week</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>HC_Leader__c</columns>
        <columns>Source_of_Enquiry_or_Registration__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Free_Of_Charge_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Enrolments Paid Last Week</label>
    </listViews>
    <listViews>
        <fullName>Enrolments_Paid_This_Week</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>HC_Leader__c</columns>
        <columns>Source_of_Enquiry_or_Registration__c</columns>
        <columns>Payment_Status__c</columns>
        <columns>Free_Of_Charge_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Enrolments Paid This Week</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Today_s_New_Opportunities</fullName>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>HC_Leader__c</columns>
        <columns>DM__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Created_by_Api__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s New Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_go_Back_to_ER</fullName>
        <active>true</active>
        <description>This rule avoids backward change from forward stage to ER</description>
        <errorConditionFormula>OR(
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Cancelled&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;RPL&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Presenter&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Completed&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Attended&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Paid&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Waitlist&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Clicked Enroled&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Enrolment Completed&apos;) ,ISPICKVAL(StageName , &apos;Enquiry Received&apos;) ))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage cannot go backward</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_go_to_New_Opp_Stage</fullName>
        <active>true</active>
        <description>This rule avoids the change of stage from enquiry received to new opportunity</description>
        <errorConditionFormula>OR(AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Enquiry Received&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Cancelled&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;RPL&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Presenter&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Completed&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Attended&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Paid&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Waitlist&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Clicked Enrol&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ),
AND( ISPICKVAL(PRIORVALUE(StageName), &apos;Enrolment Completed&apos;) ,ISPICKVAL(StageName , &apos;New Opportunity&apos;) ))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Stage cannot be changed to New Opportunity.(cannot go backward)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_amount_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR
(ISPICKVAL(StageName, &quot;Paid&quot;),
ISPICKVAL(StageName, &quot;Attended&quot;),
ISPICKVAL(StageName, &quot;Completed&quot;)),
NOT(ISBLANK(Amount)),
ISCHANGED(Amount)
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Can not change the Amount field.</errorMessage>
    </validationRules>
</CustomObject>